# kuznya

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: DEVELOPMENT.md
docs/specs/: 2026-07-23-kuznya-design.md
src/: App.tsx  api.ts  entropy.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: generator.rs  lib.rs  main.rs
src/components/: HeatGauge.tsx  ToggleChip.tsx
src/hooks/: useForge.ts
