# Кузня — генератор паролей
# by Benovich · https://github.com/Denchikper/password_generator

[package]
name = "kuznya"
version = "2.0.0"
description = "Кузня — генератор паролей"
authors = ["Daniel Benovich"]
license = "MIT"
repository = "https://github.com/Denchikper/password_generator"
edition = "2021"

[lib]
name = "kuznya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
